# for_kaken_test

initialization/: formation.ini  position_frigo_1.ini  position_frigo_2.ini  position_kohga3_1.ini  position_kohga3_2.ini  position_umrs2009_1.ini  position_umrs2009_2.ini  position_umrs2010_1.ini  position_umrs2010_2.ini
kaken_msgs/: CMakeLists.txt  package.xml
kaken_msgs/msg/: RelativePoseStamped.msg
kyoto/: CMakeLists.txt  package.xml
kyoto/msg/: RelativePoseStamped.msg  SelectStamped.msg
kyoto/src/decoder_kohga3_1/: decoder_kohga3_1.cpp  decoder_kohga3_1.h  main.cpp
kyoto/src/decoder_kohga3_2/: decoder_kohga3_2.cpp  decoder_kohga3_2.h  main.cpp
kyoto/src/encoder_kohga3_1/: encoder_kohga3_1.cpp  encoder_kohga3_1.h  main.cpp
kyoto/src/encoder_kohga3_2/: encoder_kohga3_2.cpp  encoder_kohga3_2.h  main.cpp
kyoto/src/formation/: formation.cpp  formation.h  main.cpp
relative_pose_publisher/: CMakeLists.txt  package.xml
relative_pose_publisher/src/: relative_pose_publisher.py
